vite-project/src/common/navbar/Navbar.style.css
.header {
  position: fixed;
  left: 0;
  top: 0;
  right: 0;
  border-bottom: 1px solid #dfdfdf;
  background-color: white;
  padding: 0 200px;
}
.nav {
  width: 100%;
  height: 70px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.nav-logo {
  width: 153px;
  height: 51px;
  display: flex;
  align-items: center;
  gap: 6px;
}

.nav-title {
  color: var(--primary100);
  font-weight: 700;
  line-height: 100%;
  font-size: 25.63px;
}

.nav-links {
  flex: 8;
  display: flex;
  gap: 10px;
}

.nav-links a {
  font-weight: 700;
  color: #4b5563;
  line-height: 26px;
  font-size: 18px;
}

.nav-links a.active {
  color: var(--primary100);
}

.nav-panda {
  width: 40px;
  height: 40px;
}

